--- a/style.css
+++ b/style.css
@@ -15,6 +15,26 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: hsl(212, 45%, 89%)
+}
+
+h1 {
+  font-size: 20px;
+  line-height: 1.1;
+  color: black;
+}
+
+p {
+  font-size: 15px;
+  color: black;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,40 +44,33 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 #app {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
 
 .card {
   padding: 2em;
+  border: 1px solid white;
+  border-radius: 15px;;
+  width: 300px;
+  background-color: hsl(0, 0%, 100%);
+}
+
+.card-image {
+  border-radius: 15px;
+  max-width: 300px;
+}
+
+.card-title {
+  padding-top: 10px;
+}
+
+.card-paragraph {
+  color: darkgray;
 }
 
 .read-the-docs {
@@ -86,15 +99,3 @@ button:focus-visible {
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
