Finalizing QR code project

--- a/style.css
+++ b/style.css
@@ -17,10 +17,7 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
   background-color: hsl(212, 45%, 89%)
 }
 
@@ -46,23 +43,31 @@ a:hover {
 
 #app {
   max-width: 1440px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.flex-child {
+  flex: 0 1 auto;
+}
 
 .card {
-  padding: 2em;
+  padding: 1em;
   border: 1px solid white;
   border-radius: 15px;;
-  width: 300px;
+  max-width: 300px;
   background-color: hsl(0, 0%, 100%);
 }
 
 .card-image {
   border-radius: 15px;
-  max-width: 300px;
+  width: 100%;
+  height: auto;
 }
 
 .card-title {
@@ -71,29 +76,6 @@ a:hover {
 
 .card-paragraph {
   color: darkgray;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 .attribution { font-size: 11px; text-align: center; }
